🎯 Refactor project to Clean Architecture layout
- Apply Clean Architecture principles: separate pkg, internal, domain layers
- Introduce internal/app for startup logic (fx.Module wiring, seed, migrate)
- Move config, logger, database, lang into internal/pkg/
- Use fx for DI across layers (zap.Logger, *gorm.DB, lang.Get)
- Standardize Session and Server into internal/net/
- Improve modularity for handler (not_login, not_map, sub_command)
- Refactor lang service to support fallback and injection
- Ensure proper shutdown via fx.Lifecycle and graceful stop

--- a/internal/lang/message/vi.json
+++ b/internal/lang/message/vi.json
@@ -9,6 +9,9 @@
         "register_email_exists": "Email đã được sử dụng, vui lòng nhập email khác.",
         "register_success": "Đăng ký thành công! Vui lòng đăng nhập để tiếp tục."
     },
+	"server": {
+		"reach_max_players": "Đã đạt giới hạn người chơi tối đa. Vui lòng thử lại sau."
+	},
     "common": {
         "error_occurred": "Đã có lỗi xảy ra. Vui lòng liên hệ với quản trị viên để được hỗ trợ."
     }
